# simple-fastapi-repo

./: .gitignore  check_balance.py  core.py  custom_middleware.py  database.py  exception_handler.py  fake_testing.py  json_env.py  logger_info.py  mail.py  main.py  models.py  old_main.py  pyproject.toml  repositories.py  schemas.py  test.db  webhook.py
template/v2/: v2.html
